# ScreenshotToText

./: .gitignore  CMakeLists.txt  README.md
scripts/: build.sh  clean.sh  run.sh
src/: BasicButton.cpp  BasicButton.h  BasicPane.cpp  BasicPane.h  ControlPanelFrame.cpp  ControlPanelFrame.h  MyFrame.cpp  MyFrame.h  ScreenShotFrame.cpp  ScreenShotFrame.h  ScreenshotFrame.cpp  ScreenshotFrame.h  main.cpp  testWX.cpp
